updating the website section in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/harsha-varthan-ramdoss-a5a953182/">LinkedIn</a>
         <a class="footer-link" href="https://github.com/Harshavarthan07">Github</a>
-        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <a class="footer-link" href="https://harshavarthan07.github.io/personal-site/">Website</a>
         <p class="copyright">© 2022 Harsha varthan S R</p>
       </div>
       
